# mnemo-backend

./: .dockerignore  .env.example  .gitignore  .pylintrc  DEPLOYMENT.md  Dockerfile  Makefile  README.md  TODOS  check_memory_tables.py  demo_perplexity_tools.py  deploy.sh  docker-compose.yml  docker-entrypoint.sh  docker.env  example.env  main.py  pyproject.toml  pytest.ini  setup_pgvector_memory.py  test_gmail_integration.py  test_whatsapp_debug.py
agents/: orchestrator.py  postgres.py
agents/constants/: aws.py  tenant_maps.py  workflow_names.py
agents/utils/: __init__.py  langchain_wrapper.py  langfuse_utils.py  tenant_config.py
agents/workflows/: base_node.py  base_workflow.py
agents/workflows/whatsapp/: __init__.py  index.py  memory.py  nodes.py  prompts.py  state.py  tools.py
agents/workflows/whatsapp/integrations/: __init__.py  github.py  gmail.py  google_calendar.py  google_docs.py  meeting_reminder.py  perplexity_search.py  whatsapp.py
agents/workflows/whatsapp/tasks/: meeting_reminder_task.py
constants/: exceptions.py
examples/: react_agent_example.py
helpers/: db_utils.py  index.py  langfuse_config.py  logger_config.py  prompt_helpers.py  whatsapp_validator.py
middleware/: auth_middleware.py  logging_middlewares.py
models/: resilient_postgres_saver.py  user_models.py
repository/: user_repository.py
routes/: stream_routes.py  user_routes.py  whatsapp_routes.py  workflow_routes.py
schemas/: user_schemas.py
scripts/: test_meeting_reminder.py  test_whatsapp_message.py
services/: image_generation.py  prometheus.py
tests/: README.md  __init__.py  conftest.py  test_integration_tools.py  test_langchain_wrapper.py  test_meeting_reminder.py  test_memory_tools.py  test_sample_tools.py  test_whatsapp_workflow.py
